@@ -1,8 +1,7 @@
 This file documents how to use the binary distribution packages built by
 ImageMagick Studio LLC, and found in the ImageMagick 'binaries' subdirectory
 of ImageMagick ftp sites.  Those who want to build ImageMagick from source
-code should refer to the file README.txt in the ImageMagick source package
-or http://www.imagemagick.org/script/install-source.php on the web.
+code should refer to http://www.imagemagick.org/script/install-source.php.
 
 Unix/Linux/Darwin/Mac OS X/Cygwin/MinGW Install:
 
